# EDA-with-Docker

./: .gitignore  README.md  attach.sh  compose.yaml  pyproject.toml  update_xauth.sh
pyproxy/: builder.py  command_builder.py  config.py  configuration.py  environment_holder.py  executors.py  main.py  shell_strategies.py  ssh_executor.py
rocky/: Dockerfile  setup.sh  skeleton.tcsh  skeleton.tcshrc
script/: eda_config.toml  eda_proxy.py  setup_symlinks.py
tests/: test_builder.py
ubuntu/: Dockerfile  ssh_config
